typescript/checker/tests/conformance/interfaces/interfaceDeclarations/interfaceExtendsObjectIntersection.ts.stderr
error: unimplemented
expand_export_info(Constructor)
File: $DIR/tests/conformance/interfaces/interfaceDeclarations/interfaceExtendsObjectIntersection.ts
  --> $DIR/tests/conformance/interfaces/interfaceDeclarations/interfaceExtendsObjectIntersection.ts:20:9
   |
20 | declare function Constructor<T>(): Constructor<T>;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

